--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,32 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# b = {}\n",
-    "# for w in words:\n",
-    "#   chs = ['<S>'] + list(w) + ['<E>']\n",
-    "  \n",
-    "#   for ch1, ch2 in zip(chs, chs[1:]):\n",
-    "#     bigram = (ch1, ch2)\n",
-    "#     # print(bigram)\n",
-    "#     # b[bigram] = b.get(bigram, 0) + 1\n",
-    "#     b[bigram] = b.get(bigram, 0) + 1\n",
-    "    \n",
-    "# print(b)\n",
-    "# print(sorted(b.items(), key = lambda kv: -kv[1]))\n",
-    "\n",
-    "# for k, v in b.items():\n",
-    "#   print(k, v\n",
-    "  \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +105,7 @@
        "         134,  535,  929], dtype=torch.int32)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +139,7 @@
        "        4.2109e-03, 1.6719e-02, 2.9008e-02])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,36 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.1958)"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p[0]"
+    "# p[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([14, 19, 14,  0,  0])"
+       "tensor([13, 19, 14,  1,  1])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,12 +176,12 @@
    "source": [
     "g = torch.Generator().manual_seed(2147483647) # for the code to be deterministic (smae random number)\n",
     "\n",
-    "torch.multinomial(p, num_samples=5, replacement=True, generator=g)"
+    "torch.multinomial(P[0], num_samples=5, replacement=True, generator=g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -226,15 +190,14 @@
      "text": [
       "junide\n",
       "janasah\n",
-      "pcony\n",
-      "ann\n",
-      "kohin\n"
+      "p\n",
+      "cony\n",
+      "a\n"
      ]
     }
    ],
    "source": [
-    "g = torch.Generator().manual_seed(2147483647) # for the code to be deterministic (smae random number)\n",
-    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
     "for i in range(5):# gnerating new names\n",
     "  \n",
     "  out = []\n",
@@ -244,8 +207,8 @@
     "    ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
     "\n",
     "    if ix == 0:    \n",
-    "      if len(out) <= 2:#names with less than 2 char is ignord\n",
-    "        continue\n",
+    "      # if len(out) <= 2:#names with less than 2 char is ignord\n",
+    "      #   continue\n",
     "      break\n",
     "\n",
     "    out.append(itos[ix])\n",
@@ -255,67 +218,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logLikelihood=tensor(-337293.8438)\n",
-      "negativeLogLikelihood=337293.84375\n",
-      "1.4784\n"
+      "log_likelihood=tensor(-559951.5625)\n",
+      "nll=tensor(559951.5625)\n",
+      "2.4543561935424805\n"
      ]
     }
    ],
    "source": [
-    "logLikelihood = 0.0\n",
+    "log_likelihood = 0.0\n",
     "n = 0\n",
-    "#we put sum of all sequence ocurance in a torch tensor\n",
+    "\n",
     "for w in words:\n",
-    "  word = ['.'] + list(w) + ['.'] # we want to save the occurance of the char at the end and begining\n",
-    "  for ch1, ch2 in zip(word, word[1:]): #the rows are first char and the columns are the second char\n",
-    "    ch1tot = stoi[ch1]\n",
-    "    ch2tot = stoi[ch2]\n",
-    "\n",
+    "  chs = ['.'] + list(w) + ['.']\n",
+    "  for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "    ix1 = stoi[ch1]\n",
+    "    ix2 = stoi[ch2]\n",
+    "    prob = P[ix1, ix2]\n",
     "    logprob = torch.log(prob)\n",
-    "    logLikelihood += logprob\n",
+    "    log_likelihood += logprob\n",
     "    n += 1\n",
-    "    # print(f'{ch1}{ch2}: {prob:.4f} {logprob:.4f}')\n",
     "\n",
-    "\n",
-    "print(f'{logLikelihood=}')\n",
-    "print(f'negativeLogLikelihood={-logLikelihood}')\n",
-    "print(f'{nll/n:.4f}') # we want this to be minimized"
+    "print(f'{log_likelihood=}')\n",
+    "nll = -log_likelihood\n",
+    "print(f'{nll=}')\n",
+    "print(f'{nll/n}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
