--- a/bigram_nn.ipynb
+++ b/bigram_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,56 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# g = torch.Generator().manual_seed(2147483647) # for the code to be deterministic (smae random number)\n",
-    "# W = torch.randn((27, 27),  generator = g, requires_grad=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #forward\n",
-    "# x_one_hot = F.one_hot(x, num_classes=27).float()\n",
-    "# logits = x_one_hot @ W # ln of the counts\n",
-    "# counts = logits.exp()\n",
-    "# probs = counts / counts.sum(1, keepdims=True) # normalized counts like th blue diagram in the bigram.ipynb\n",
-    "  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loss = -probs[torch.arange(5), y].log().mean()  \n",
-    "# print(loss.item())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # backward propegation\n",
-    "# W.grad = None # set to zero the gradient\n",
-    "# loss.backward()\n",
-    "# W.data += -5 * W.grad\n",
-    "# num = x.nelement()\n",
-    "# ploss = 0.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +76,7 @@
     "print('number of examples: ', num)\n",
     "\n",
     "# initialize the 'network'\n",
-    "# g = torch.Generator().manual_seed(2147483647)\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
     "W = torch.randn((27, 27), generator=g, requires_grad=True)"
    ]
   },
@@ -133,15 +84,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.480978012084961\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# lop for loss\n",
     "\n",
@@ -168,19 +111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "junide.\n",
-      "janasah.\n",
-      "p.\n",
-      "cfay.\n",
-      "a.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "g = torch.Generator().manual_seed(2147483647)\n",
